--- a/crda.yaml
+++ b/crda.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: myappzs.example.com
+  name: myappas.example.com
 spec:
   group: example.com
   versions:
@@ -24,8 +24,8 @@ spec:
                   type: integer
   scope: Namespaced
   names:
-    plural: myappzs
-    singular: myappz
-    kind: MyAppz
+    plural: myappas
+    singular: myappa
+    kind: MyAppa
     shortNames:
-      - maz
+      - maa
